# ftd-omop-validator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: README.md  requirements.txt
src/ftd_omop_validator/: omop_file_validator.py  omop_validation.ipynb  settings.py
src/ftd_omop_validator/data/input/: conditions.csv
src/ftd_omop_validator/resources/: omop_validation.py
