[build-system]
requires = ["setuptools>=61.0"] #, "setuptools-scm"]
build-backend = "setuptools.build_meta"

#[tool.setuptools_scm]
version_file = "ftd-omop-validator/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ftd_omop_validator" = ["resources/*.txt"]

[project]
name = "ftd_omop_validator"

description = "Unified API Interface for ontology search APIs."
readme = "src/README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["numpy==1.26.4",
                "pandas==2.0.3",
                "cchardet==2.1.7",
                "gcsfs<2023.10"]

dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)